<resources>
    <string name="app_name">Shoppe-mobile</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Password</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_product">Product</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="sign_in">Login</string>
    <string name="create_account">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_category_name">Category Name</string>
    <string name="create_category">Create Category</string>
    <string name="action_create">Create</string>
    <string name="new_item">New</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="menu_logout">Log out</string>
</resources>