<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.roselyn.shoppe_mobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_category_content"
            app:destination="@id/nav_category_content" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.roselyn.shoppe_mobile.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.roselyn.shoppe_mobile.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_category_content"
        android:name="com.roselyn.shoppe_mobile.ui.category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category">
        <action
            android:id="@+id/action_nav_category_content_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_category_form"
        android:name="com.roselyn.shoppe_mobile.ui.category.CategoryFragmentForm"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category_form" />
</navigation>